--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,20 +15,20 @@ services:
       - ./:/var/www
     networks:
       - laravel
-  db:
-    image: "mysql:5.7"
-    container_name: laravel-db
-    restart: unless-stopped
+  db:   
+    build:     
+      context: ./
+      dockerfile: DockerfileDB
     command: --default-authentication-plugin=mysql_native_password
+    container_name: laravel-db
+    restart: unless-stopped    
     environment:
       MYSQL_DATABASE: "${DB_DATABASE}"
       MYSQL_ROOT_PASSWORD: "${DB_PASSWORD}"
       MYSQL_PASSWORD: "${DB_PASSWORD}"
-      MYSQL_USER: "${DB_USERNAME}"      
-      SERVICE_TAGS: dev
-      SERVICE_NAME: mysql
+      MYSQL_USER: "${DB_USERNAME}"     
     volumes:     
-       - ./docker-compose/db:/var/lib/mysql
+       - ./docker-compose/db:/var/lib/mysql       
     networks:
       - laravel
   nginx:
@@ -36,7 +36,7 @@ services:
     container_name: laravel-nginx
     restart: unless-stopped
     ports:
-      - 8001:80
+      - 8000:80
     volumes:
       - ./:/var/www
       - ./docker-compose/nginx:/etc/nginx/conf.d/
